--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,32 @@ body {
     /*background-image: url("/images/90539.jpg");
     background-repeat: repeat;
     background-size: cover;
-    background-position: center;*/
+    background-position: center;
+    opacity: 0.6;*/
+
+}
+
+.demo_wrap {
+    position: relative;
+    overflow: hidden;
+    padding: 16px;
+    border: 1px dashed rgb(223, 142, 21);
+}
+.demo_wrap h1 {
+    padding: 100px;
+    position: relative;
+    z-index: 2;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 5em;
+}
+.demo_wrap img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    opacity: 0.6;
 }
 
 .container {
@@ -28,23 +53,13 @@ body {
     padding: 2em 0;
 }
 
-.background-1 {
-    background-color:rgb(248, 197, 134);
-}
-.background-2 {
-    background-color:rgb(241, 157, 53);
-}
-
-h1 {
-    text-transform: uppercase;
-    margin: 1em 3em;
-    font-weight: 700;
-    font-size: 3em;
-}
-
 h2 {
     font-weight: 500; 
+    align-items: center;
+    justify-content: center;
 }
+
+
 
 h3 {
     text-transform: uppercase;
@@ -81,7 +96,7 @@ h3 {
 
 }
 
-form {
+main {
     padding: 1.5em;
     display: flex;
     flex-direction: column;
@@ -92,18 +107,15 @@ form {
 
 }
 
-label {
+h4 {
     font-weight:300;
     font-size: 1.5;
     padding: .5em auto;
 }
 
-label, input, select, textarea {
+h4, input, select, textarea {
     margin: .4em;
 }
-
-
-
 
 /* pendiente de estudiar ...
 @media(min-width: 60rem) {
