--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@ Notas:
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: rgb(247, 215, 227);
 }
 
 .wrap {
@@ -19,7 +20,7 @@ body {
 .wrap h1 {
     padding: 100px;
     position: relative;
-    z-index: 2;
+    z-index: 1;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 5em;
@@ -33,49 +34,34 @@ body {
     opacity: 0.6;
 }
 
-content-grid  {
-    position: relative;
-    display: grid;
-    grid-template-columns: 100px 100px; 
-    grid-template-rows: 100px 100px;
-    align-content: center;
-    top: 0px;
-    height: 100%;
-}
-
 .main-content {
     padding: 2em 0;
     width: 800px;
     max-width: 50%;
     margin: 0 auto;
-    /*display: flex;
+    display: flex;
     flex-direction: column;
     justify-content:center;
-    text-align: center;*/
+    text-align: center;
 }
 
 h2 {
     font-weight: 500; 
-    align-items: center;
-    justify-content: center;
 }
-
-
 
 h3 {
     text-transform: uppercase;
     font-weight: 400; 
     font-size: 1.2em;
-    margin: auto;
 }
 
-#img-header {
-    width: 18em;
-}
-
-#txt-header {
+h2, h3 {
     margin: 1.5em;
-    font-weight: 300;
+    position: relative;
+    z-index: 1;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .btn-place {
@@ -83,18 +69,16 @@ h3 {
     flex-direction: row;
     justify-content:space-evenly;
     align-items:center;
-
 }
 
 .btn-type {
-    background-color: rgb(250, 71, 0);
+    background-color: rgb(249, 75, 75);
     border-radius: 1em;
     justify-content: space-between;
     align-items: space-between;
     font-size: 1em;
     margin: 1em;
     padding: .5em;
-
 }
 
 main {
@@ -118,14 +102,6 @@ h4, input, select, textarea {
     margin: .4em;
 }
 
-/* pendiente de estudiar ...
-@media(min-width: 60rem) {
-    .text-image{
-        flex-direction: row;
-        align-items: stretch;
-    }
-}*/
-
 footer .wrap {
     text-align: center;
     align-items: center;
@@ -134,9 +110,12 @@ footer .wrap {
     background-color: rgb(255, 235, 205);
 }
 
-a {
-    text-decoration: none;
+img .logo {
+    width: 25px;
+    height: 25px;
     display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
 }
 
-/*background-color: rgb(255, 228, 196);*/
