--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,21 @@
-/*
-Notas: 
-    - em: se calcula desde el font-size base (16px) y del padre del elemento que se está usando
-    - rem: se calcula desde el font-size del body
-    - px: para mantener el tamaño de una fuente fija
-*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
+/*Estilos globales*/
 body {
-    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
     background-color: rgb(247, 215, 227);
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
 }
 
+/*Estilos header*/
 .wrap {
     position: relative;
     overflow: hidden;
     padding: 16px;
     border: 1px dashed rgb(223, 142, 21);
 }
+
 .wrap h1 {
     padding: 100px;
     position: relative;
@@ -25,6 +24,7 @@ body {
     font-weight: 700;
     font-size: 5em;
 }
+
 .wrap img {
     position: absolute;
     left: 0;
@@ -34,6 +34,7 @@ body {
     opacity: 0.6;
 }
 
+/*Estilos main*/
 .main-content {
     padding: 2em 0;
     width: 800px;
@@ -46,15 +47,19 @@ body {
 }
 
 .insertText {
-    display: inline;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    text-align: center;
 }
 
+/*Estilos de texto*/
 h2 {
     font-weight: 500; 
 }
 
 h3 {
-    text-transform: uppercase;
     font-weight: 400; 
     font-size: 1.2em;
 }
@@ -68,34 +73,6 @@ h2, h3 {
     text-align: center;
 }
 
-.btn-place {
-    display: flex;
-    flex-direction: row;
-    justify-content:space-evenly;
-    align-items:center;
-}
-
-.btn-type {
-    background-color: rgb(249, 75, 75);
-    border-radius: 1em;
-    justify-content: space-between;
-    align-items: space-between;
-    font-size: 1em;
-    margin: 1em;
-    padding: .5em;
-}
-
-main {
-    padding: 1.5em;
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    align-items:center;
-    margin-left: 2em;
-    margin-right: 2em;
-
-}
-
 h4 {
     font-weight:300;
     font-size: 1.5;
@@ -106,6 +83,40 @@ h4, input, select, textarea {
     margin: .4em;
 }
 
+h5 {
+    text-transform: uppercase;
+}
+
+#num-cipher, #users {
+    width: 18em;
+}
+
+#msn-input, #msn-output {
+    width: 25em;
+    height: 15em;
+}
+
+/*Estilos de botones*/
+.btn-place {
+    display: flex;
+    flex-direction: row;
+    justify-content:stretch;
+    align-items:center;
+}
+
+.btn-type {
+    background-color: rgb(249, 75, 75);
+    border-radius: 1em;
+    justify-content: center;
+    align-items: center;
+    font-size: .9em;
+    margin: 1.5em;
+    padding: .3em;
+    height: 4em;
+    width: 9em;
+}
+
+/*Estilos footer*/
 footer .wrap {
     text-align: center;
     align-items: center;
@@ -122,4 +133,7 @@ img .logo {
     justify-content: center;
     align-content: center;
 }
+
+
+
 
