--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Square+Peg&display=swap');
 
 /*Estilos globales*/
 body {
     box-sizing: border-box;
-    background-color: rgb(247, 215, 227);
+    background-color: rgb(224, 154, 222);
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
 }
@@ -12,17 +14,20 @@ body {
 .wrap {
     position: relative;
     overflow: hidden;
-    padding: 16px;
+    padding: 8px;
     border: 1px dashed rgb(223, 142, 21);
 }
 
 .wrap h1 {
-    padding: 100px;
-    position: relative;
+    background-color:rgba(107, 104, 107, 0.2);position: relative;
     z-index: 1;
+    padding: 100px;
+    font-family: 'Bungee Shade', cursive;
+    text-align: center;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 5em;
+    font-size: 7em;
+    border-radius: 10px; 
 }
 
 .wrap img {
@@ -34,10 +39,24 @@ body {
     opacity: 0.6;
 }
 
+h2 {
+    background-color:rgba(107, 104, 107, 0.2);
+    border-radius: 10px; 
+    font-family: 'Square Peg', cursive;
+    font-size: 3em;
+}
+
+h3 {
+    font-weight: 400; 
+    font-size: 1.2em;
+    background-color:rgba(107, 104, 107, 0.2);
+    border-radius: 10px; 
+}
+
 /*Estilos main*/
 .main-content {
     padding: 2em 0;
-    width: 800px;
+    width: 850px;
     max-width: 100%;
     margin: 0 auto;
     display: flex;
@@ -47,24 +66,13 @@ body {
 }
 
 .insertText {
-    position: relative;
     display: flex;
     flex-direction: row;
-    justify-content:center;
-    text-align: center;
+    margin: 0.3em .9em;
 }
 
-/*Estilos de texto*/
+/*Estilos de títulos y texto*/
 h2 {
-    font-weight: 500; 
-}
-
-h3 {
-    font-weight: 400; 
-    font-size: 1.2em;
-}
-
-h2, h3 {
     margin: 1.5em;
     position: relative;
     z-index: 1;
@@ -74,46 +82,99 @@ h2, h3 {
 }
 
 h4 {
-    font-weight:300;
-    font-size: 1.5;
     padding: .5em auto;
-}
-
-h4, input, select, textarea {
-    margin: .4em;
+    margin-right: 1.5em; 
 }
 
 h5 {
-    text-transform: uppercase;
+    background-color:rgba(230, 201, 236, 0.5);
+    border-radius: 10px;
+    font-size: .9em;
+    margin-top: .5em;
+    padding: .4em;
+    width: 9em;
+    height: 6em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#num-cipher, #users {
-    width: 18em;
+textarea {
+    margin: 2em;
 }
 
-#msn-input, #msn-output {
-    width: 25em;
+input {
+    margin: 2em;
+}
+
+select {
+    margin: 2em;
+}
+
+.subtitle {
+    font-family: 'Roboto', sans-serif;
+    font-size: .5em;
+    font-weight: 300;
+};
+
+.titleMain {
+    font-size: 1.2em;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.textMain {
+    background-color:rgba(230, 201, 236, 0.5); 
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-radius: 10px;
+    margin-bottom: 2em;
+}
+
+#chat-email, #user  {
+    font-size: .8em;
+    height: 2.5em;
+    width: 12em;
+    border-radius: 10px;
+    padding: .5em;
+    justify-items: center;
+    align-items: center;
+}
+
+#num-cipher {
+    font-size: .8em;
+    height: 2.5em;
+    width: 5em;
+    border-radius: 10px;
+    padding: .5em auto;
+    justify-items: center;
+    align-items: center;
+}
+
+#msn-input #msn-output {
+    font-size: .8em;
+    width: 20em;
     height: 15em;
 }
 
+
+
 /*Estilos de botones*/
-.btn-place {
-    display: flex;
-    flex-direction: row;
-    justify-content:stretch;
-    align-items:center;
-}
 
 .btn-type {
+    position: relative;
     background-color: rgb(249, 75, 75);
     border-radius: 1em;
-    justify-content: center;
-    align-items: center;
     font-size: .9em;
-    margin: 1.5em;
+    margin-top: 5.5em;
+    margin-left: 1.7em;
     padding: .3em;
-    height: 4em;
-    width: 9em;
+    height: 5em;
+    width: 10em;
+    text-align:center;
 }
 
 /*Estilos footer*/
